<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ManageTimesheetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="@color/purple_200" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sheets_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            app:srcCompat="@android:drawable/ic_input_add"
            app:tint="@color/purple_200" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/searchDate1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:drawableLeft="@android:drawable/ic_menu_today"
                android:gravity="center"
                android:hint="@string/date_label"
                android:inputType="date"
                android:paddingTop="5dp" />

            <TextView
                android:id="@+id/searchDate2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="25dp"
                android:drawableLeft="@android:drawable/ic_menu_today"
                android:gravity="center"
                android:hint="@string/date_label"
                android:inputType="date"
                android:paddingTop="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonNewGoal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="bottom|left"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="15dp"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:text="@string/search_label"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:text="@string/active_label"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>